--- a/FlowCode/style/style_comuns.css
+++ b/FlowCode/style/style_comuns.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 body{
     width: 100%;
     height: 100%;
-    font-family: sans-serif;
+    font-family: 'Inter', sans-serif;
     margin: 0;
 }
 
@@ -44,14 +46,19 @@ body{
     color: #022873;
 }
 
-fieldset{
+fieldset {
+    width: 80%; /* Ajuste o valor de acordo com o seu layout */
+    margin: 0 auto;
     border-color: red;
     height: 140px;
 }
 
+
 label{
     display: block;
     margin-bottom: 5px;
+    color: #888888;
+    font-weight: bold;
 }
 
 form{
@@ -62,6 +69,7 @@ form{
 }
 
 #email, #password{
+    margin-bottom: 30px;
     background: #BFBFBF;
     width: 350px;
     height: 35px;
@@ -72,4 +80,14 @@ form{
 #email::placeholder{
     color: #FFFFFF;
     padding: 10px;
+}
+
+#remember, a{
+    color: #022873;
+    font-weight: bold;
+}
+
+a{
+    text-decoration: none;
+    padding-left: 140px;
 }
