--- a/FlowCode/style/style_comuns.css
+++ b/FlowCode/style/style_comuns.css
@@ -25,7 +25,7 @@ body{
 }
 
 .gridItem:nth-child(1){
-    background: rgb(32, 171, 32);
+    background: rgb(255, 140, 0);
     grid-row: 1/-1;
 }
 
@@ -36,7 +36,13 @@ body{
     color: black;
 }
 
-.space-2{
+.space-1{
+    background-image: url(.images/fundo_laranja.png);
+}
+
+.space-1 img{
+    width: 100%;
+    height: 200px;
 }
 
 .space-2 h1{
@@ -46,10 +52,21 @@ body{
     color: #022873;
 }
 
+.space-1 h1{
+    text-align: center;
+    font-weight: bold;
+    color: #022873;
+}
+
+p{
+    color: #FFFFFF;
+    padding: 20px;
+}
+
 fieldset {
     width: 80%; /* Ajuste o valor de acordo com o seu layout */
     margin: 0 auto;
-    border-color: red;
+    border-color: transparent;
     height: 140px;
 }
 
