--- a/FlowCode/style/style_comuns.css
+++ b/FlowCode/style/style_comuns.css
@@ -38,6 +38,8 @@ body{
 }
 
 .space-1 img{
+    margin-left: -15px;
+    margin-top: 50px;
     width: 100%;
     height: 200px;
 }
@@ -56,13 +58,7 @@ body{
     color: #022873;
 }
 
-.space-1 img{
-    margin-left: 20px;
-    margin-top: 50px;
-    width: 80%;
-}
-
-p{
+.space-1 p{
     color: #FFFFFF;
     text-align: center;
 }
@@ -90,6 +86,7 @@ form{
 }
 
 #email, #password{
+    margin-top: 20px;
     margin-bottom: 30px;
     background: #BFBFBF;
     width: 100%; /* Altere para usar uma porcentagem ou vw */
@@ -99,7 +96,9 @@ form{
     border-radius: 6px;
 }
 
-#email::placeholder{
+
+
+#email::placeholder , #password::placeholder{
     font-size: 16px;
     color: #FFFFFF;
     padding: 10px;
@@ -128,27 +127,40 @@ input[type="checkbox"]{
     width: 133px;
     height: 39px;
     background: #F19F06;
+    box-shadow: 1px 5px 5px rgb(139, 138, 138);
     border: none;
     border-radius: 6px;
     color: #FFFFFF;
+    font-weight: bold;
+    font-size: 15px;
     text-transform: uppercase;
 }
 
-/*.hr-separator {
-    margin-top: 160px;
-    width: 55%;
+.password-toggle {
+    position: fixed;
+    top: 49%;
+    right: 310px;
+    transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
+    background-image: url("/images/visibility_off_FILL0_wght400_GRAD0_opsz48.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
 }
 
-.hr-separator::after{
-    width: 150px;
-    padding: 0 0 0 15px;
-    background: #FFFFFF;
-    position: absolute;
-    top: 433px;
-    left: 790px;
-    content: "Entre ou crie com";
+.password-toggle:active {
+    background-image: url("/images/visibility_FILL0_wght400_GRAD0_opsz48.png");
 }
-*/
+
+
+.btn-hover:hover{
+    cursor: pointer;
+    background-color: #fea500;
+    transition: all 0.4s ease;
+}
+
 
 /* min-width */
 .container {
@@ -159,13 +171,15 @@ input[type="checkbox"]{
   }
   
   .outher_login {
-    margin-top: 25vh;
+    margin-top: 30.5vh;
     margin-bottom: 20px;
     position: relative;
   }
   
   .outher_login p {
     color: black;
+    color: #888888;
+    font-weight: bold;
   }
   
   .outher_login hr {
@@ -184,31 +198,99 @@ input[type="checkbox"]{
     padding: 0 15px;
   }
 
+  .btn-cadastre{
+    font-size: 18px;
+    font-weight: bold;
+    box-shadow: 1px 5px 5px rgb(139, 138, 138);
+    width: 133px;
+    height: 32px;
+    background: #F19F06;
+    border: none;
+    border-radius: 6px;
+    color: #FFFFFF;
+  }
+
   .google-button {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 130px;
+    height: 35px;
     padding: 10px 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    font-size: 15px;
     border: none;
     border-radius: 4px;
-    background-color: #4285F4;
-    color: #ffffff;
+    background-color: #fff;
+    box-shadow: 1px 5px 5px rgb(139, 138, 138);
+    color: #888888;
     cursor: pointer;
   }
-  
-  .google-button i {
-    margin-right: 5px;
+
+  .google-button:hover{
+    width: 132px;
+    background-color: #bbd2f644;
+    transition: all 0.3s ease-in;
   }
-  
 
-@media screen and (max-width: 120em) {
-    a{
-        margin-left: 140px; 
+  .google-button img{
+    width: 20px;
+    height: 20px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .gridContainer {
+        grid-template-columns: 100%; /* Altera para uma única coluna */
+        grid-template-rows: auto; /* Remove a altura fixa */
     }
+
+    .gridItem:nth-child(2) {
+        grid-row: 2; /* Posiciona o elemento na segunda linha */
+        grid-column: 1; /* Posiciona o elemento na primeira coluna */
+    }
+
+    .space-2 {
+        padding: 20px; /* Adiciona espaço interno */
+    }
+
+    form {
+        width: 100%; /* Ajusta a largura do formulário */
+    }
+
+    fieldset{
+        margin-left: 120px;
+    }
+
+    .btn-entrar{
+        margin-left: 120px;
+    }
+    .outher_login hr::after{
+        content: "Crie ou entre com";
+        position: absolute;
+        top: -2px;
+        left: 230px;
+        color: #888888;
+        background-color: #FFFFFF;
+        width: 140px;
+        padding: 0 15px;
+      }
 }
 
-@media screen and (min-width: 40em) {
-    a{
-        padding-left: 10px; 
+/*@media screen and(min-width: 1024px) {
+    .outher_login hr {
+        width: 450px;
+        margin-bottom: 30px;
     }
-}
+    
+    .outher_login hr::after{
+        content: "Crie ou entre com";
+        position: absolute;
+        top: -2px;
+        left: 320px;
+        color: #888888;
+        background-color: #FFFFFF;
+        width: 140px;
+        padding: 0 15px;
+    }
+}*/
