--- a/FlowCode/style/style_comuns.css
+++ b/FlowCode/style/style_comuns.css
@@ -137,7 +137,7 @@ input[type="checkbox"]{
 }
 
 .password-toggle {
-    position: fixed;
+    position: absolute;
     top: 49%;
     right: 310px;
     transform: translateY(-50%);
@@ -245,6 +245,11 @@ input[type="checkbox"]{
         grid-template-rows: auto; /* Remove a altura fixa */
     }
 
+    .space-1 img {
+        width: 80%;
+        margin-left: 35px;
+    }
+
     .gridItem:nth-child(2) {
         grid-row: 2; /* Posiciona o elemento na segunda linha */
         grid-column: 1; /* Posiciona o elemento na primeira coluna */
@@ -252,45 +257,30 @@ input[type="checkbox"]{
 
     .space-2 {
         padding: 20px; /* Adiciona espaço interno */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 
     form {
-        width: 100%; /* Ajusta a largura do formulário */
+        width: 80%; /* Ajusta a largura do formulário */
+        margin: 0 auto; /* Centraliza horizontalmente */
     }
 
-    fieldset{
-        margin-left: 120px;
+    fieldset {
+        margin: 0;
     }
 
-    .btn-entrar{
-        margin-left: 120px;
-    }
-    .outher_login hr::after{
+    .outher_login hr::after {
         content: "Crie ou entre com";
         position: absolute;
         top: -2px;
-        left: 230px;
+        left: 160px;
         color: #888888;
         background-color: #FFFFFF;
         width: 140px;
         padding: 0 15px;
-      }
+    }
 }
-
-/*@media screen and(min-width: 1024px) {
-    .outher_login hr {
-        width: 450px;
-        margin-bottom: 30px;
-    }
-    
-    .outher_login hr::after{
-        content: "Crie ou entre com";
-        position: absolute;
-        top: -2px;
-        left: 320px;
-        color: #888888;
-        background-color: #FFFFFF;
-        width: 140px;
-        padding: 0 15px;
-    }
-}*/
