--- a/FlowCode/style/style_comuns.css
+++ b/FlowCode/style/style_comuns.css
@@ -37,19 +37,12 @@ body{
     color: black;
 }
 
+/*filho 1 - lateral*/
 .space-1 img{
     margin-left: -15px;
     margin-top: 50px;
     width: 100%;
     height: 200px;
-}
-
-.space-2 h1{
-    font-size: 35px;
-    margin-bottom: 50px;
-    margin-top: 44px;
-    text-align: center;
-    color: #022873;
 }
 
 .space-1 h1{
@@ -61,6 +54,15 @@ body{
 .space-1 p{
     color: #FFFFFF;
     text-align: center;
+}
+
+/*filho 2 - form*/
+.space-2 h1{
+    font-size: 35px;
+    margin-bottom: 50px;
+    margin-top: 44px;
+    text-align: center;
+    color: #022873;
 }
 
 fieldset {
@@ -96,30 +98,28 @@ form{
     border-radius: 6px;
 }
 
-
-
 #email::placeholder , #password::placeholder{
     font-size: 16px;
     color: #FFFFFF;
     padding: 10px;
 }
 
-a{
+label a{
     text-decoration: none;
-    padding-left: 140px;
+    margin-left: 160px;
     color: #022873;
     font-weight: bold;
     font-size: 12px;
 }
 
+label a:hover{
+    text-decoration: underline;
+    transition: all 0.8s ease;
+}
+
 input[type="checkbox"]{
     margin-bottom: 35px;
 }
-
-/*.remember{
-    font-size: 40px;
-    color: #022873;
-}*/
 
 .btn-entrar{
     margin: 0 auto;
@@ -161,20 +161,19 @@ input[type="checkbox"]{
     transition: all 0.4s ease;
 }
 
-
-/* min-width */
+/*div entrar com Google*/
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-  }
+}
   
-  .outher_login {
+.outher_login {
     margin-top: 30.5vh;
     margin-bottom: 20px;
     position: relative;
-  }
+}
   
   .outher_login p {
     color: black;
@@ -238,7 +237,7 @@ input[type="checkbox"]{
     width: 20px;
     height: 20px;
   }
-
+/*tratando responsividade*/
   @media screen and (max-width: 768px) {
     .gridContainer {
         grid-template-columns: 100%; /* Altera para uma única coluna */
@@ -277,7 +276,7 @@ input[type="checkbox"]{
         content: "Crie ou entre com";
         position: absolute;
         top: -2px;
-        left: 160px;
+        left: 210px;
         color: #888888;
         background-color: #FFFFFF;
         width: 140px;
