--- a/FlowCode/style/style_comuns.css
+++ b/FlowCode/style/style_comuns.css
@@ -21,7 +21,7 @@ body{
 .gridContainer{
     display: grid;
     grid-template-columns: 30% 70% ; /* respectivos valores da largura de cada coluna */
-    grid-template-rows: 100vh; /* respectivos valores da altura de cada linha*/
+    grid-template-rows: 100%; /* respectivos valores da altura de cada linha*/
 }
 
 .gridItem:nth-child(1){
@@ -87,9 +87,9 @@ form{
     margin: 0 auto;
 }
 
-#email, #password{
-    margin-top: 20px;
-    margin-bottom: 30px;
+#email, #password, #username{
+    margin-top: 10px;
+    margin-bottom: 15px;
     background: #BFBFBF;
     width: 100%; /* Altere para usar uma porcentagem ou vw */
     max-width: 350px; /* Adicione um limite máximo para evitar que fiquem muito grandes */
@@ -176,7 +176,6 @@ input[type="checkbox"]{
 }
   
   .outher_login p {
-    color: black;
     color: #888888;
     font-weight: bold;
   }
