--- a/FlowCode/style/tela-arquivos.css
+++ b/FlowCode/style/tela-arquivos.css
@@ -1,71 +1,190 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
-body{
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-}
-
-.gridContainer{
-    width: 100%;
-    height: 100%;
-    background: #bdbdd6;
+body {
+  margin: 0;
+  font-family: "Inter", sans-serif;
 }
 
-.gridItem{
-    background: #999;
-    font-size: 2em;
-}
-.gridItem:nth-child(even){
-    background: #999;
-    color: white;
-}
-.gridItem:nth-child(odd){
-    background: #eee;
-}
 /*GRID*/
-.gridContainer{
-    display: grid;      
-    grid-template-columns: 100px repeat(2, 1fr) ; 
-    grid-template-rows: 140px 130px 100vh; 
 
+.gridContainer {
+  width: 100%;
+  height: 100%;
+  background: #bdbdd6;
 }
 
-.gridItem:nth-child(1){
-    background: #EAEAEA;
-    grid-row: 1/2; /*linha*/ 
-    grid-column: 1/4; /*coluna*/ 
+.gridItem {
+  background: #999;
+  font-size: 2em;
 }
 
-.gridItem:nth-child(2){
-    background: #BFBFBF;
-    grid-row: 2/3;
-    grid-column: 1/-1;
+.gridContainer {
+  display: grid;
+  grid-template-columns: 100px repeat(2, 1fr);
+  grid-template-rows: 200px 190px 80vh;
 }
 
-.gridItem:nth-child(3){
-    color: black;
-    background: rgb(201, 117, 246);
-    grid-column: 1/-1;
+.gridItem:nth-child(1) {
+  background: #eaeaea;
+  grid-row: 1/2; /*linha*/
+  grid-column: 1/4; /*coluna*/
 }
 
-.navBar{
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 50px black;
+.gridItem:nth-child(2) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background: #bfbfbf;
+  grid-row: 2/3;
+  grid-column: 1/-1;
 }
 
-.navBar p{
-    margin: 0 auto;
-    font-size: 30px;
-    font-weight: bold;
-    color: #022873;
+.gridItem:nth-child(3) {
+  color: black;
+  background: #f6f6f6;
+  grid-column: 1/-1;
+}
+/*Item 1 - nav*/
+.navBar {
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 50px black;
 }
 
-.hamburguer{
-   margin-left: 60px;
-   color: #022873;
+.navBar p {
+  margin: 0 auto;
+  font-size: 30px;
+  font-weight: bold;
+  color: #022873;
 }
 
-.user{
-    margin: 0 40px;
+.hamburguer {
+  margin-left: 60px;
+  color: #022873;
+}
+
+.hamburguer:hover{
+    cursor: pointer;
+    color: #012f8b;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100vh;
+    background-color: #f1f1f1;
+    transition: left 0.3s ease;
+  }
+  
+  .show {
+    left: 0;
+  }
+
+.user {
+  margin: 0 40px;
+}
+
+/*Item 2 - header*/
+.btn-header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 267px;
+  height: 145px;
+  background: rgba(241, 159, 6, 0.95);
+  border: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 6px;
+  margin: 0 40px;
+  font-size: 25px;
+  font-weight: bold;
+  color: #f6f6f6;
+}
+
+.fa-project-diagram,
+.fa-folder {
+  font-size: 50px;
+  color: black;
+}
+
+.fold {
+  background-color: #d9d9d9;
+}
+
+.fold:hover {
+  cursor: pointer;
+  background-color: #cecece;
+  transition: all 0.6s ease;
+}
+
+.diagram:hover {
+  background-color: rgba(255, 166, 0, 0.95);
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
+
+/*Item 3 - corpo*/
+.label-group {
+  margin-top: 40px;
+}
+
+.label {
+  margin-left: 60px;
+  margin-right: 5px;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  color: #888888;
+}
+
+select {
+  background: #f6f6f6;
+  border: 0;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.custom-button {
+  margin-left: 500px;
+  padding: 0 10px;
+  background-color: transparent;
+  height: 23px;
+  border: 1px solid black;
+  font-size: 18px;
+  color: black;
+  cursor: pointer;
+}
+
+.custom-button:hover {
+  background-color: #a6aba7;
+}
+
+.fa-folder-plus {
+  margin-right: 5px;
+}
+
+.fa-folder-download {
+  font-size: 16px;
+}
+
+.hr-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.hr-wrapper hr {
+  margin-left: 32px;
+  width: 100%;
+  max-width: 1242px; /* opcional: ajuste a largura máxima do <hr> conforme necessário */
 }
