--- a/FlowCode/style/tela-arquivos.css
+++ b/FlowCode/style/tela-arquivos.css
@@ -6,8 +6,10 @@ body {
 }
 
 /*GRID*/
-
 .gridContainer {
+  display: grid;
+  grid-template-columns: 100px repeat(2, 1fr);
+  grid-template-rows: 200px 190px 80vh;
   width: 100%;
   height: 100%;
   background: #bdbdd6;
@@ -16,12 +18,6 @@ body {
 .gridItem {
   background: #999;
   font-size: 2em;
-}
-
-.gridContainer {
-  display: grid;
-  grid-template-columns: 100px repeat(2, 1fr);
-  grid-template-rows: 200px 190px 80vh;
 }
 
 .gridItem:nth-child(1) {
@@ -68,7 +64,7 @@ body {
     cursor: pointer;
     color: #012f8b;
 }
-
+/*-- lateral quando o hamburguer abrir --*/
 .sidebar {
     position: fixed;
     top: 0;
@@ -186,5 +182,45 @@ input[type="file"] {
 .hr-wrapper hr {
   margin-left: 32px;
   width: 100%;
-  max-width: 1242px; /* opcional: ajuste a largura máxima do <hr> conforme necessário */
+  max-width: 1242px; 
 }
+
+/*Grid Arquivos*/
+
+.gridContainerArquivos {
+  background-color: red;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gridItemArquivos {
+  display: flex;
+  align-items: flex-end;
+  width: 500px;
+  height: 300px;
+  margin: 20px;
+  box-shadow: (0px 4px 8px rgba(0, 0, 0, 0.25));
+  background: #FFFFFF;
+  border-radius: 5px;
+}
+
+.fileCapition{
+  width: 100%;
+  height: 60px;
+  background: #F6F6F6;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  letter-spacing: 0.02em;
+
+  color: #000000;
+}
+
+
