--- a/FlowCode/style/tela-arquivos.css
+++ b/FlowCode/style/tela-arquivos.css
@@ -223,6 +223,7 @@ input[type="file"] {
 }
 
 .diagram-caption{
+  font-size: 20px;
   margin-left: 20px;
   margin-right: 25px;
 }
@@ -231,7 +232,7 @@ input[type="file"] {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-right: 210px;
+  margin-right: 230px;
 }
 
 h1, p{
@@ -263,4 +264,52 @@ p{
 
 .selected {
   color: yellow ;
+}
+
+.btnOptions {
+  display: inline-block;
+  position: relative;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100px;
+  border: 1px solid #ccc;
+  display: none;
+}
+
+.btnOptions:hover .options {
+  display: block;
+}
+
+.option {
+  background-color: #e1e0e0;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.optUm{
+  margin-bottom: 2px;
+}
+
+.option:hover{
+  background-color: #ccc;
+}
+
+.fa-trash-alt{
+  margin: 5px;
+  color: red;
+}
+
+.fa-info-circle{
+  margin: 5px;
+  color: #022873;
 }
