--- a/FlowCode/style/sidebar.css
+++ b/FlowCode/style/sidebar.css
@@ -1,13 +1,13 @@
 .containerSidebar {
   width: 295px;
   height: auto;
-  border: 2px solid red;
+  border: 2px solid #777676a4;
 }
 
 .user {
   background-color: transparent;
   border: none;
-  margin-top: 30px;
+  margin-top: 10px;
   display: flex;
   align-items: center;
 }
@@ -121,12 +121,53 @@
 
 /*Lixeira*/
 .lixeira{
-    height: 300px;
+    height: 50px;
 }
 
-.lixeira img{
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    flex-direction: column;
+.lixeira {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto 30px;
+}
+
+.p-lixeira{
+  color: #661C1C;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 15px;
+}
+
+.img{
+  height: 250px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.img img{
+  width: 200px;
+  margin: 0 auto;
+}
+
+/*Hover - botões*/
+
+.files:hover{
+  background-color: #dadadadf;
+  width: 100%;
+}
+
+.p-file:hover, .label-group select:hover, .fa-star:hover, .fa-trash:hover{
+  color: #494949;
+}
+
+.files:hover, .p-file:hover, .btn-newfile:hover, .btn-newsquad:hover, .label-group select:hover, .p-lixeira:hover, .fa-star:hover, .fa-trash:hover{
+  transition: all 0.8s ease;
+}
+
+.btn-newfile:hover, .btn-newsquad:hover{
+  background-color:  #4150707f;
+}
+
+.p-lixeira:hover{
+  color: #ad0303;
 }
