--- a/FlowCode/style/tela-arquivos.css
+++ b/FlowCode/style/tela-arquivos.css
@@ -129,7 +129,7 @@ body {
   margin-top: 40px;
 }
 
-.label {
+.label-page {
   margin-left: 60px;
   margin-right: 5px;
   font-weight: 700;
@@ -179,7 +179,7 @@ input[type="file"] {
   flex-direction: row;
 }
 
-.hr-wrapper hr {
+.hr-page {
   margin-left: 32px;
   width: 100%;
   max-width: 1242px; 
