--- a/FlowCode/style/sidebar.css
+++ b/FlowCode/style/sidebar.css
@@ -39,7 +39,11 @@
 }
 
 .user-sidebar {
+  background-color: transparent;
+  border: none;
   margin: 0 40px;
+  display: flex;
+  align-items: center;
 }
 
 /*botoes de arquivos*/
@@ -185,7 +189,6 @@ margin: 0 5px;
 }
 
 /*Hover - botões*/
-
 .files:hover{
   background-color: #dadadadf;
   width: 100%;
@@ -193,6 +196,10 @@ margin: 0 5px;
 
 .p-file:hover, .label-group select:hover, .fa-star:hover, .fa-trash:hover{
   color: #494949;
+}
+
+.estrela-card:hover{
+  color: yellow;
 }
 
 .files:hover, .p-file:hover, .btn-newfile:hover, .btn-newsquad:hover, .label-group select:hover, .p-lixeira:hover, .fa-star:hover, .fa-trash:hover{
@@ -238,4 +245,3 @@ margin: 0 5px;
   cursor: pointer;
 }
 
-/* Adicione o restante do seu CSS abaixo */
