--- a/FlowCode/style/tela-arquivos.css
+++ b/FlowCode/style/tela-arquivos.css
@@ -144,10 +144,11 @@ input[type="file"] {
 
 .custom-button {
   margin-left: 500px;
-  padding: 0 10px;
+  padding: 5px 10px;
   background-color: transparent;
-  height: 23px;
+  height: 30px;
   border: 1px solid black;
+  border-radius: 6px;
   font-size: 18px;
   color: black;
   cursor: pointer;
