--- a/FlowCode/style/tela-arquivos.css
+++ b/FlowCode/style/tela-arquivos.css
@@ -306,8 +306,21 @@ h1{
 }
 
 /*Respondividade*/
-@media screen and(max-width: 770px){
-  .navBar{
-    flex-wrap: wrap;
+@media screen and (max-width: 46em){ /* 784px/16px 1em */ 
+  .navBar .fas, .p-navbar{
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 43em){ /* 784px/16px 1em */ 
+  .user, .lupa{
+    margin-left: 30px;
+  }
+  .navBar .fas, .p-navbar{
+    font-size: 25px;
+  }
+
+  .p-navbar{
+    margin: 0 30px;
   }
 }
